GNOME Bugzilla – Bug 649053
gnome-screensaver dies when logging into GNOME 3.0 remotely over NX
Last modified: 2011-05-01 14:07:11 UTC
gnome-screensaver dies when logging into GNOME 3.0 remotely over NX. Crash happens when GNOME session starts. Running manually: $ gnome-screensaver ** GnomeDesktop:ERROR:gnome-rr.c:256:screen_info_free: assertion failed: (info != NULL) Aborted (core dumped) $ rpm -q gnome-screensaver gnome-screensaver-3.0.0-1.fc15.x86_64 Here is the content of .xsession-errors: -- gnome-session[12353]: WARNING: GSIdleMonitor: IDLETIME counter not found gnome-session-is-accelerated: No composite extension. gnome-session-check-accelerated: Helper exited with code 256 gnome-session[12353]: WARNING: Session 'gnome' runnable check failed: Exited with code 1 gnome-session[12353]: WARNING: Unable to determine session: Unable to lookup session information for process '12353' gnome-session[12353]: WARNING: Could not parse desktop file /home/luke_h/.config/autostart/xfconf-migration-4.6.desktop: Key file does not have key 'Name' gnome-session[12353]: WARNING: could not read /home/luke_h/.config/autostart/xfconf-migration-4.6.desktop GNOME_KEYRING_CONTROL=/tmp/keyring-n753Hk SSH_AUTH_SOCK=/tmp/keyring-n753Hk/ssh GNOME_KEYRING_PID=12504 GNOME_KEYRING_CONTROL=/tmp/keyring-n753Hk SSH_AUTH_SOCK=/tmp/keyring-n753Hk/ssh GNOME_KEYRING_CONTROL=/tmp/keyring-n753Hk SSH_AUTH_SOCK=/tmp/keyring-n753Hk/ssh GPG_AGENT_INFO=/tmp/keyring-n753Hk/gpg:0:1 GNOME_KEYRING_CONTROL=/tmp/keyring-n753Hk SSH_AUTH_SOCK=/tmp/keyring-n753Hk/ssh ** GnomeDesktop:ERROR:gnome-rr.c:256:screen_info_free: assertion failed: (info != NULL) gnome-session[12353]: WARNING: Application 'gnome-settings-daemon.desktop' killed by signal ** GnomeDesktop:ERROR:gnome-rr.c:256:screen_info_free: assertion failed: (info != NULL) (polkit-gnome-authentication-agent-1:12554): polkit-gnome-1-WARNING **: Unable to determine the session we are in: GDBus.Error:org.freedesktop.ConsoleKit.Manager.GeneralError: Unable to lookup session information for process '12554' MCS->Xfconf settings migration complete Failed to play sound: File or data not found ** (nm-applet:12542): WARNING **: _nm_object_get_property: Error getting 'WirelessHardwareEnabled' for /org/freedesktop/NetworkManager: (9) Rejected send message, 3 matched rules; type="method_call", sender=":1.78" (uid=16955 pid=12542 comm="nm-applet ") interface="org.freedesktop.DBus.Properties" member="Get" error name="(unset)" requested_reply=0 destination="org.freedesktop.NetworkManager" (uid=0 pid=1032 comm="/usr/sbin/NetworkManager --no-daemon ")) ** (nm-applet:12542): WARNING **: _nm_object_get_property: Error getting 'WwanHardwareEnabled' for /org/freedesktop/NetworkManager: (9) Rejected send message, 3 matched rules; type="method_call", sender=":1.78" (uid=16955 pid=12542 comm="nm-applet ") interface="org.freedesktop.DBus.Properties" member="Get" error name="(unset)" requested_reply=0 destination="org.freedesktop.NetworkManager" (uid=0 pid=1032 comm="/usr/sbin/NetworkManager --no-daemon ")) ** (nm-applet:12542): WARNING **: _nm_object_get_property: Error getting 'WimaxHardwareEnabled' for /org/freedesktop/NetworkManager: (9) Rejected send message, 3 matched rules; type="method_call", sender=":1.78" (uid=16955 pid=12542 comm="nm-applet ") interface="org.freedesktop.DBus.Properties" member="Get" error name="(unset)" requested_reply=0 destination="org.freedesktop.NetworkManager" (uid=0 pid=1032 comm="/usr/sbin/NetworkManager --no-daemon ")) ** (nm-applet:12542): WARNING **: _nm_object_get_property: Error getting 'State' for /org/freedesktop/NetworkManager: (9) Rejected send message, 3 matched rules; type="method_call", sender=":1.78" (uid=16955 pid=12542 comm="nm-applet ") interface="org.freedesktop.DBus.Properties" member="Get" error name="(unset)" requested_reply=0 destination="org.freedesktop.NetworkManager" (uid=0 pid=1032 comm="/usr/sbin/NetworkManager --no-daemon ")) ** Message: applet now removed from the notification area ** (nm-applet:12542): WARNING **: get_all_cb: couldn't retrieve system settings properties: (9) Rejected send message, 3 matched rules; type="method_call", sender=":1.78" (uid=16955 pid=12542 comm="nm-applet ") interface="org.freedesktop.DBus.Properties" member="GetAll" error name="(unset)" requested_reply=0 destination="org.freedesktop.NetworkManager" (uid=0 pid=1032 comm="/usr/sbin/NetworkManager --no-daemon ")). ** (nm-applet:12542): WARNING **: nm_client_get_devices: error getting devices: Rejected send message, 3 matched rules; type="method_call", sender=":1.78" (uid=16955 pid=12542 comm="nm-applet ") interface="org.freedesktop.NetworkManager" member="GetDevices" error name="(unset)" requested_reply=0 destination="org.freedesktop.NetworkManager" (uid=0 pid=1032 comm="/usr/sbin/NetworkManager --no-daemon ")) ** (nm-applet:12542): WARNING **: _nm_object_get_property: Error getting 'ActiveConnections' for /org/freedesktop/NetworkManager: (9) Rejected send message, 3 matched rules; type="method_call", sender=":1.78" (uid=16955 pid=12542 comm="nm-applet ") interface="org.freedesktop.DBus.Properties" member="Get" error name="(unset)" requested_reply=0 destination="org.freedesktop.NetworkManager" (uid=0 pid=1032 comm="/usr/sbin/NetworkManager --no-daemon ")) ** (nm-applet:12542): WARNING **: _nm_object_get_property: Error getting 'State' for /org/freedesktop/NetworkManager: (9) Rejected send message, 3 matched rules; type="method_call", sender=":1.78" (uid=16955 pid=12542 comm="nm-applet ") interface="org.freedesktop.DBus.Properties" member="Get" error name="(unset)" requested_reply=0 destination="org.freedesktop.NetworkManager" (uid=0 pid=1032 comm="/usr/sbin/NetworkManager --no-daemon ")) ** (nm-applet:12542): WARNING **: _nm_object_get_property: Error getting 'ActiveConnections' for /org/freedesktop/NetworkManager: (9) Rejected send message, 3 matched rules; type="method_call", sender=":1.78" (uid=16955 pid=12542 comm="nm-applet ") interface="org.freedesktop.DBus.Properties" member="Get" error name="(unset)" requested_reply=0 destination="org.freedesktop.NetworkManager" (uid=0 pid=1032 comm="/usr/sbin/NetworkManager --no-daemon ")) ** (nm-applet:12542): WARNING **: Failed to register as an agent: (32) No session found for uid 16955 ** (nm-applet:12542): WARNING **: _nm_object_get_property: Error getting 'State' for /org/freedesktop/NetworkManager: (9) Rejected send message, 3 matched rules; type="method_call", sender=":1.78" (uid=16955 pid=12542 comm="nm-applet ") interface="org.freedesktop.DBus.Properties" member="Get" error name="(unset)" requested_reply=0 destination="org.freedesktop.NetworkManager" (uid=0 pid=1032 comm="/usr/sbin/NetworkManager --no-daemon ")) ** (nm-applet:12542): WARNING **: _nm_object_get_property: Error getting 'ActiveConnections' for /org/freedesktop/NetworkManager: (9) Rejected send message, 3 matched rules; type="method_call", sender=":1.78" (uid=16955 pid=12542 comm="nm-applet ") interface="org.freedesktop.DBus.Properties" member="Get" error name="(unset)" requested_reply=0 destination="org.freedesktop.NetworkManager" (uid=0 pid=1032 comm="/usr/sbin/NetworkManager --no-daemon ")) (gnome-power-manager:12556): Gdk-WARNING **: The program 'gnome-power-manager' received an X Window System error. This probably reflects a bug in the program. The error was 'BadRequest (invalid request code or no such operation)'. (Details: serial 116 error_code 1 request_code 150 minor_code 8) (Note to programmers: normally, X errors are reported asynchronously; that is, you will receive the error a while after causing it. To debug your program, run it with the --sync command line option to change this behavior. You can then get a meaningful backtrace from your debugger if you break on the gdk_x_error() function.) ** Message: applet now embedded in the notification area ** (nm-applet:12542): WARNING **: _nm_object_get_property: Error getting 'State' for /org/freedesktop/NetworkManager: (9) Rejected send message, 3 matched rules; type="method_call", sender=":1.78" (uid=16955 pid=12542 comm="nm-applet ") interface="org.freedesktop.DBus.Properties" member="Get" error name="(unset)" requested_reply=0 destination="org.freedesktop.NetworkManager" (uid=0 pid=1032 comm="/usr/sbin/NetworkManager --no-daemon ")) ** (nm-applet:12542): WARNING **: _nm_object_get_property: Error getting 'ActiveConnections' for /org/freedesktop/NetworkManager: (9) Rejected send message, 3 matched rules; type="method_call", sender=":1.78" (uid=16955 pid=12542 comm="nm-applet ") interface="org.freedesktop.DBus.Properties" member="Get" error name="(unset)" requested_reply=0 destination="org.freedesktop.NetworkManager" (uid=0 pid=1032 comm="/usr/sbin/NetworkManager --no-daemon ")) ** (notification-daemon:12545): DEBUG: Adding id 1 ** (notification-daemon:12545): DEBUG: Notification closed - removing from queue ** (notification-daemon:12545): DEBUG: Removing id 1 ** (notification-daemon:12545): DEBUG: Bubble destroyed ** (deja-dup-monitor:12540): DEBUG: monitor.vala:263: Invalid next run date. Not scheduling a backup. Lock file '/home/luke_h/.abrt/spool/ccpp-2011-04-30-19:21:02-12005/.lock' was locked by process 12858, but it crashed?
*** Bug 649055 has been marked as a duplicate of this bug. ***
This is a gnome-desktop bug
Created attachment 186954 [details] [review] patch
Review of attachment 186954 [details] [review]: Yes, please.