Don't fall over if RANDR is missing

When RANDR is not present, the screen object never gets an info,
and since screen_info_free asserts, we must not call it unconditionally
in finalize.

Based on gnome-desktop commit: aa93854f2ba6b0f72f1bdff9699b5724a72c89c9
From: Matthias Clasen <mclasen@redhat.com>
Gnome bug: tps://bugzilla.gnome.org/show_bug.cgi?id=649053